@@ -1,35 +1,34 @@
 package api.loans;
 
-import static api.support.fakes.PublishedEvents.byLogEventType;
 import static api.support.fixtures.ItemExamples.basedUponSmallAngryPlanet;
 import static api.support.matchers.PatronNoticeMatcher.hasEmailNoticeProperties;
 import static api.support.matchers.ScheduledNoticeMatchers.hasScheduledLoanNotice;
+import static api.support.utl.PatronNoticeTestHelper.verifyNumberOfPublishedEvents;
+import static api.support.utl.PatronNoticeTestHelper.verifyNumberOfScheduledNotices;
+import static api.support.utl.PatronNoticeTestHelper.verifyNumberOfSentNotices;
 import static java.util.Comparator.comparing;
 import static org.folio.circulation.domain.representations.logs.LogEventType.NOTICE;
 import static org.folio.circulation.support.json.JsonPropertyFetcher.getDateTimeProperty;
 import static org.hamcrest.CoreMatchers.hasItems;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.hasSize;
+import static org.joda.time.DateTimeZone.UTC;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
-import org.awaitility.Awaitility;
 import org.folio.circulation.domain.policy.Period;
 import org.hamcrest.Matcher;
 import org.joda.time.DateTime;
-import org.joda.time.DateTimeZone;
 import org.junit.Before;
 import org.junit.Test;
 
@@ -45,6 +44,7 @@ import api.support.fixtures.TemplateContextMatchers;
 import api.support.http.IndividualResource;
 import api.support.http.ItemResource;
 import api.support.http.UserResource;
+import api.support.utl.PatronNoticeTestHelper;
 import io.vertx.core.json.JsonObject;
 
 public class DueDateScheduledNoticesProcessingTests extends APITests {
@@ -55,28 +55,29 @@ public class DueDateScheduledNoticesProcessingTests extends APITests {
   private static final int SCHEDULED_NOTICES_PROCESSING_LIMIT = 100;
   private static final String NEXT_RUN_TIME = "nextRunTime";
 
+  private static final Period BEFORE_PERIOD = Period.days(2);
+  private static final Period BEFORE_RECURRING_PERIOD = Period.hours(6);
+  private static final Period AFTER_PERIOD = Period.days(3);
+  private static final Period AFTER_RECURRING_PERIOD = Period.hours(4);
 
-  private final UUID beforeTemplateId = UUID.randomUUID();
-  private final Period beforePeriod = Period.days(2);
-  private final Period beforeRecurringPeriod = Period.hours(6);
+  private static final UUID BEFORE_TEMPLATE_ID = UUID.randomUUID();
+  private static final UUID BEFORE_RECURRING_TEMPLATE_ID = UUID.randomUUID();
+  private static final UUID UPON_AT_TEMPLATE_ID = UUID.randomUUID();
+  private static final UUID AFTER_TEMPLATE_ID = UUID.randomUUID();
+  private static final UUID AFTER_RECURRING_TEMPLATE_ID = UUID.randomUUID();
 
-  private final UUID uponAtTemplateId = UUID.randomUUID();
-
-  private final UUID afterTemplateId = UUID.randomUUID();
-  private final Period afterPeriod = Period.days(3);
-  private final Period afterRecurringPeriod = Period.hours(4);
-
-  private final DateTime loanDate = new DateTime(2018, 3, 18, 11, 43, 54, DateTimeZone.UTC);
+  private static final DateTime LOAN_DATE = new DateTime(2018, 3, 18, 11, 43, 54, UTC);
 
   private ItemResource item;
   private UserResource borrower;
   private IndividualResource loan;
+  private UUID loanId;
   private DateTime dueDate;
 
   @Before
   public void beforeEach() {
-    FakePubSub.clearPublishedEvents();
-    setUpNoticePolicy();
+    PatronNoticeTestHelper.clearSentPatronNoticesAndPubsubEvents();
+    usersFixture.defaultAdmin();
 
     ItemBuilder itemBuilder = basedUponSmallAngryPlanet(
       materialTypesFixture.book().getId(), loanTypesFixture.canCirculate().getId());
@@ -90,100 +91,97 @@ public class DueDateScheduledNoticesProcessingTests extends APITests {
     item = itemsFixture.basedUponSmallAngryPlanet(itemBuilder, holdingBuilder);
     borrower = usersFixture.steve();
 
-    loan = checkOutFixture.checkOutByBarcode(
-      new CheckOutByBarcodeRequestBuilder()
-        .forItem(item)
-        .to(borrower)
-        .on(loanDate)
-        .at(UUID.randomUUID()));
-
-    dueDate = new DateTime(loan.getJson().getString("dueDate"));
-
-    assertSetUpIsCorrect();
+    templateFixture.createDummyNoticeTemplate(BEFORE_TEMPLATE_ID);
+    templateFixture.createDummyNoticeTemplate(BEFORE_RECURRING_TEMPLATE_ID);
+    templateFixture.createDummyNoticeTemplate(UPON_AT_TEMPLATE_ID);
+    templateFixture.createDummyNoticeTemplate(AFTER_TEMPLATE_ID);
+    templateFixture.createDummyNoticeTemplate(AFTER_RECURRING_TEMPLATE_ID);
   }
 
   @Test
-  public void beforeNoticeShouldBeSentAndItsNextRunTimeShouldBeUpdated() {
+  public void recurringBeforeNoticeShouldBeSentAndRescheduled() {
+    generateLoanAndScheduledNotices(beforeNotice(true));
 
-    DateTime beforeDueDateTime = dueDate.minus(beforePeriod.timePeriod()).plusSeconds(1);
-    templateFixture.createDummyNoticeTemplate(beforeTemplateId);
+    DateTime beforeDueDateTime = dueDate.minus(BEFORE_PERIOD.timePeriod()).plusSeconds(1);
     scheduledNoticeProcessingClient.runLoanNoticesProcessing(beforeDueDateTime);
-    checkSentNotices(beforeTemplateId);
+    checkSentNotices(BEFORE_RECURRING_TEMPLATE_ID);
 
-    DateTime expectedNewRunTimeForBeforeNotice = dueDate
-      .minus(beforePeriod.timePeriod())
-      .plus(beforeRecurringPeriod.timePeriod());
+    DateTime expectedNextRunTime = dueDate
+      .minus(BEFORE_PERIOD.timePeriod())
+      .plus(BEFORE_RECURRING_PERIOD.timePeriod());
 
-    checkScheduledNotices(
-      expectedNewRunTimeForBeforeNotice,
-      dueDate,
-      dueDate.plus(afterPeriod.timePeriod()));
+    verifyScheduledNotices(
+      scheduledNoticeMatcher(loanId, BEFORE_RECURRING_TEMPLATE_ID, BEFORE_TIMING,
+        BEFORE_RECURRING_PERIOD, expectedNextRunTime)
+    );
+
+    verifyNumberOfSentNotices(1);
+    verifyNumberOfPublishedEvents(NOTICE, 1);
   }
 
   @Test
   public void beforeNoticeShouldBeSendAndDeletedWhenItsNextRunTimeIsAfterDueDate() {
+    generateLoanAndScheduledNotices(beforeNotice(true));
 
     DateTime justBeforeDueDateTime = dueDate.minusSeconds(1);
-    templateFixture.createDummyNoticeTemplate(beforeTemplateId);
     scheduledNoticeProcessingClient.runLoanNoticesProcessing(justBeforeDueDateTime);
 
-    checkSentNotices(beforeTemplateId);
+    checkSentNotices(BEFORE_RECURRING_TEMPLATE_ID);
 
-    checkScheduledNotices(
-      null,
-      dueDate,
-      dueDate.plus(afterPeriod.timePeriod()));
+    verifyNumberOfScheduledNotices(0);
+    verifyNumberOfSentNotices(1);
+    verifyNumberOfPublishedEvents(NOTICE, 1);
   }
 
   @Test
   public void uponAtNoticeShouldBeSentWhenProcessingJustAfterDueDate() {
+    generateLoanAndScheduledNotices(uponAtNotice());
 
     DateTime justAfterDueDateTime = dueDate.plusSeconds(1);
-    templateFixture.createDummyNoticeTemplate(uponAtTemplateId);
     scheduledNoticeProcessingClient.runLoanNoticesProcessing(justAfterDueDateTime);
 
-    checkSentNotices(uponAtTemplateId);
+    checkSentNotices(UPON_AT_TEMPLATE_ID);
 
-    checkScheduledNotices(
-      null,
-      null,
-      dueDate.plus(afterPeriod.timePeriod()));
+    verifyNumberOfScheduledNotices(0);
+    verifyNumberOfSentNotices(1);
+    verifyNumberOfPublishedEvents(NOTICE, 1);
   }
 
   @Test
   public void afterRecurringNoticeShouldBeSentSeveralTimesBeforeLoanIsClosed() {
+    generateLoanAndScheduledNotices(afterNotice(true));
 
     DateTime justAfterDueDateTime = dueDate.plusSeconds(1);
-    templateFixture.createDummyNoticeTemplate(afterTemplateId);
     scheduledNoticeProcessingClient.runLoanNoticesProcessing(justAfterDueDateTime);
     //Clear all sent notices before actual test
     patronNoticesClient.deleteAll();
 
-    DateTime afterNoticeRunTime = dueDate.plus(afterPeriod.timePeriod()).plusSeconds(1);
+    DateTime afterNoticeRunTime = dueDate.plus(AFTER_PERIOD.timePeriod()).plusSeconds(1);
     scheduledNoticeProcessingClient.runLoanNoticesProcessing(afterNoticeRunTime);
 
-    DateTime afterNoticeExpectedRunTime = dueDate
-      .plus(afterPeriod.timePeriod())
-      .plus(afterRecurringPeriod.timePeriod());
+    DateTime expectedNextRunTime = dueDate
+      .plus(AFTER_PERIOD.timePeriod())
+      .plus(AFTER_RECURRING_PERIOD.timePeriod());
 
-    checkScheduledNotices(
-      null,
-      null,
-      afterNoticeExpectedRunTime);
+    verifyScheduledNotices(
+      scheduledNoticeMatcher(loanId, AFTER_RECURRING_TEMPLATE_ID, AFTER_TIMING,
+        AFTER_RECURRING_PERIOD, expectedNextRunTime)
+    );
 
     //Run again to send recurring notice
     scheduledNoticeProcessingClient.runLoanNoticesProcessing(
-      afterNoticeExpectedRunTime.plusSeconds(1));
+      expectedNextRunTime.plusSeconds(1));
 
-    checkSentNotices(afterTemplateId, afterTemplateId);
+    checkSentNotices(AFTER_RECURRING_TEMPLATE_ID, AFTER_RECURRING_TEMPLATE_ID);
+    verifyNumberOfPublishedEvents(NOTICE, 2);
 
     DateTime secondRecurringRunTime =
-      afterNoticeExpectedRunTime.plus(afterRecurringPeriod.timePeriod());
+      expectedNextRunTime.plus(AFTER_RECURRING_PERIOD.timePeriod());
 
-    checkScheduledNotices(
-      null,
-      null,
-      secondRecurringRunTime);
+    verifyScheduledNotices(
+      scheduledNoticeMatcher(loanId, AFTER_RECURRING_TEMPLATE_ID, AFTER_TIMING,
+        AFTER_RECURRING_PERIOD, secondRecurringRunTime)
+    );
 
     checkInFixture.checkInByBarcode(item);
     //Clear sent notices again
@@ -194,16 +192,16 @@ public class DueDateScheduledNoticesProcessingTests extends APITests {
     scheduledNoticeProcessingClient.runLoanNoticesProcessing(
       secondRecurringRunTime.plusSeconds(1));
 
-    checkSentNotices();
-    checkScheduledNotices(null, null, null);
+    verifyNumberOfScheduledNotices(0);
+    verifyNumberOfSentNotices(0);
+    verifyNumberOfPublishedEvents(NOTICE, 0);
   }
 
   @Test
   public void processingTakesNoticesInThePastLimitedAndOrdered() {
-    //Clean scheduled notices before this test
-    scheduledNoticesClient.deleteAll();
+    generateLoanAndScheduledNotices();
 
-    DateTime systemTime = DateTime.now(DateTimeZone.UTC);
+    DateTime systemTime = DateTime.now(UTC);
     int expectedNumberOfUnprocessedNoticesInThePast = 10;
     int numberOfNoticesInThePast =
       SCHEDULED_NOTICES_PROCESSING_LIMIT + expectedNumberOfUnprocessedNoticesInThePast;
@@ -221,7 +219,6 @@ public class DueDateScheduledNoticesProcessingTests extends APITests {
     }
 
     scheduledNoticeProcessingClient.runLoanNoticesProcessing();
-    List<JsonObject> unprocessedScheduledNotices = scheduledNoticesClient.getAll();
 
     Comparator<JsonObject> nextRunTimeComparator =
       comparing(json -> getDateTimeProperty(json, NEXT_RUN_TIME));
@@ -230,68 +227,61 @@ public class DueDateScheduledNoticesProcessingTests extends APITests {
       .limit(expectedNumberOfUnprocessedNoticesInThePast)
       .toArray(JsonObject[]::new);
 
-    assertThat(unprocessedScheduledNotices,
-      hasSize(expectedNumberOfUnprocessedNoticesInThePast + numberOfNoticesInTheFuture));
+    List<JsonObject> unprocessedScheduledNotices = scheduledNoticesClient.getAll();
     assertThat(unprocessedScheduledNotices, hasItems(expectedUnprocessedNoticesInThePast));
     assertThat(unprocessedScheduledNotices, hasItems(noticesInTheFuture.toArray(new JsonObject[0])));
+
+    verifyNumberOfScheduledNotices(expectedNumberOfUnprocessedNoticesInThePast + numberOfNoticesInTheFuture);
+    verifyNumberOfPublishedEvents(NOTICE, 0);
   }
 
   @Test
   public void testNumberOfProcessedNoticesWithSchedulerNoticesLimitConfiguration() {
-
-    scheduledNoticesClient.deleteAll();
+    generateLoanAndScheduledNotices();
 
     int noticesLimitConfig = 200;
     int numberOfNotices = 300;
-    int expectedNumberOfUnprocessedNotices = numberOfNotices - noticesLimitConfig;
 
     // create a new configuration
     configClient.create(ConfigurationExample.schedulerNoticesLimitConfiguration(Integer.toString(noticesLimitConfig)));
 
     createNotices(numberOfNotices);
     scheduledNoticeProcessingClient.runLoanNoticesProcessing();
-    List<JsonObject> unprocessedScheduledNotices = scheduledNoticesClient.getAll();
 
-    assertThat(unprocessedScheduledNotices, hasSize(expectedNumberOfUnprocessedNotices));
+    verifyNumberOfScheduledNotices(numberOfNotices - noticesLimitConfig);
+    verifyNumberOfPublishedEvents(NOTICE, 0);
   }
 
   @Test
   public void testNumberOfProcessedNotificationsWithIncorrectConfiguration() {
-
-    scheduledNoticesClient.deleteAll();
+    generateLoanAndScheduledNotices();
 
     int numberOfNotices = 259;
-    int expectedNumberOfUnprocessedNotices = numberOfNotices - SCHEDULED_NOTICES_PROCESSING_LIMIT;
 
     // create a incorrect configuration
     configClient.create(ConfigurationExample.schedulerNoticesLimitConfiguration("IncorrectVal"));
 
     createNotices(numberOfNotices);
     scheduledNoticeProcessingClient.runLoanNoticesProcessing();
-    List<JsonObject> unprocessedScheduledNotices = scheduledNoticesClient.getAll();
 
-    assertThat(unprocessedScheduledNotices, hasSize(expectedNumberOfUnprocessedNotices));
+    verifyNumberOfScheduledNotices(numberOfNotices - SCHEDULED_NOTICES_PROCESSING_LIMIT);
+    verifyNumberOfPublishedEvents(NOTICE, 0);
   }
 
   @Test
   public void testDefaultNumberOfProcessedNotices() {
-
-    scheduledNoticesClient.deleteAll();
-
-    int expectedNumberOfUnprocessedNotices = 0;
+    generateLoanAndScheduledNotices();
 
     createNotices(SCHEDULED_NOTICES_PROCESSING_LIMIT);
     scheduledNoticeProcessingClient.runLoanNoticesProcessing();
-    List<JsonObject> unprocessedScheduledNotices = scheduledNoticesClient.getAll();
 
-    assertThat(unprocessedScheduledNotices, hasSize(expectedNumberOfUnprocessedNotices));
+    verifyNumberOfScheduledNotices(0);
+    verifyNumberOfPublishedEvents(NOTICE, 0);
   }
 
   @Test
   public void testNoticeIsDeletedIfItHasNoLoanId() {
-
-    scheduledNoticesClient.deleteAll();
-    int expectedNumberOfUnprocessedNotices = 0;
+    generateLoanAndScheduledNotices();
 
     JsonObject brokenNotice = createNoticesOverTime(dueDate.minusMinutes(1)::minusHours, 1).get(0);
     brokenNotice.remove("loanId");
@@ -301,15 +291,13 @@ public class DueDateScheduledNoticesProcessingTests extends APITests {
 
     checkSentNotices();
 
-    List<JsonObject> unprocessedScheduledNotices = scheduledNoticesClient.getAll();
-    assertThat(unprocessedScheduledNotices, hasSize(expectedNumberOfUnprocessedNotices));
+    verifyNumberOfScheduledNotices(0);
+    verifyNumberOfPublishedEvents(NOTICE, 0);
   }
 
   @Test
   public void testNoticeIsDeletedIfReferencedLoanDoesNotExist() {
-
-    scheduledNoticesClient.deleteAll();
-    int expectedNumberOfUnprocessedNotices = 0;
+    generateLoanAndScheduledNotices();
 
     JsonObject brokenNotice = createNoticesOverTime(dueDate.minusMinutes(1)::minusHours, 1).get(0);
     brokenNotice.put("loanId", UUID.randomUUID().toString());
@@ -319,15 +307,13 @@ public class DueDateScheduledNoticesProcessingTests extends APITests {
 
     checkSentNotices();
 
-    List<JsonObject> unprocessedScheduledNotices = scheduledNoticesClient.getAll();
-    assertThat(unprocessedScheduledNotices, hasSize(expectedNumberOfUnprocessedNotices));
+    verifyNumberOfScheduledNotices(0);
+    verifyNumberOfPublishedEvents(NOTICE, 0);
   }
 
   @Test
   public void testNoticeIsDeletedIfReferencedItemDoesNotExist() {
-
-    scheduledNoticesClient.deleteAll();
-    int expectedNumberOfUnprocessedNotices = 0;
+    generateLoanAndScheduledNotices();
 
     JsonObject brokenNotice = createNoticesOverTime(dueDate.minusMinutes(1)::minusHours, 1).get(0);
 
@@ -338,14 +324,14 @@ public class DueDateScheduledNoticesProcessingTests extends APITests {
 
     checkSentNotices();
 
-    List<JsonObject> unprocessedScheduledNotices = scheduledNoticesClient.getAll();
-    assertThat(unprocessedScheduledNotices, hasSize(expectedNumberOfUnprocessedNotices));
+
+    verifyNumberOfScheduledNotices(0);
+    verifyNumberOfPublishedEvents(NOTICE, 0);
   }
 
   @Test
   public void testNoticeIsDeletedIfReferencedUserDoesNotExist() {
-    scheduledNoticesClient.deleteAll();
-    int expectedNumberOfUnprocessedNotices = 0;
+    generateLoanAndScheduledNotices();
 
     JsonObject brokenNotice = createNoticesOverTime(dueDate.minusMinutes(1)::minusHours, 1).get(0);
 
@@ -356,14 +342,27 @@ public class DueDateScheduledNoticesProcessingTests extends APITests {
 
     checkSentNotices();
 
-    List<JsonObject> unprocessedScheduledNotices = scheduledNoticesClient.getAll();
-    assertThat(unprocessedScheduledNotices, hasSize(expectedNumberOfUnprocessedNotices));
+    verifyNumberOfScheduledNotices(0);
+    verifyNumberOfPublishedEvents(NOTICE, 0);
+  }
+
+  @Test
+  public void testNoticeIsDeletedIfReferencedTemplateDoesNotExist() {
+    generateLoanAndScheduledNotices(uponAtNotice());
+
+    templateFixture.delete(UPON_AT_TEMPLATE_ID);
+    scheduledNoticeProcessingClient.runLoanNoticesProcessing(dueDate.plusSeconds(1));
+
+    checkSentNotices();
+
+    verifyNumberOfScheduledNotices(0);
+    verifyNumberOfPublishedEvents(NOTICE, 0);
   }
 
   @Test
   public void testNoticesForNonExistentLoansDoNotBlockTheQueue() {
+    generateLoanAndScheduledNotices();
 
-    scheduledNoticesClient.deleteAll();
     int expectedNumberOfUnprocessedNotices = 0;
 
     List<JsonObject> notices = createNoticesOverTime(dueDate.minusMinutes(1)::minusHours, 4);
@@ -385,114 +384,160 @@ public class DueDateScheduledNoticesProcessingTests extends APITests {
 
     checkSentNotices(expectedSentTemplateId1, expectedSentTemplateId2);
 
-    List<JsonObject> unprocessedScheduledNotices = scheduledNoticesClient.getAll();
-    assertThat(unprocessedScheduledNotices, hasSize(expectedNumberOfUnprocessedNotices));
+    verifyNumberOfScheduledNotices(expectedNumberOfUnprocessedNotices);
+    verifyNumberOfPublishedEvents(NOTICE, 2);
   }
 
   @Test
-  public void noticeIsDeletedIfReferencedTemplateDoesNotExist() {
-    DateTime beforeDueDateTime = dueDate.minus(beforePeriod.timePeriod()).plusSeconds(1);
+  public void allDueDateNoticesAreDiscardedWhenLoanIsClosed() {
+    generateLoanAndScheduledNotices(
+      beforeNotice(false),
+      beforeNotice(true),
+      uponAtNotice(),
+      afterNotice(false),
+      afterNotice(true)
+    );
 
-    assertThat(scheduledNoticesClient.getAll(), hasSize(3));
+    verifyNumberOfScheduledNotices(5);
 
-    scheduledNoticeProcessingClient.runLoanNoticesProcessing(beforeDueDateTime);
+    checkInFixture.checkInByBarcode(item);
 
-    assertThat(scheduledNoticesClient.getAll(), hasSize(2));
+    verifyNumberOfScheduledNotices(5);
+
+    var processingTime = dueDate
+      .plus(AFTER_PERIOD.timePeriod())
+      .plus(AFTER_RECURRING_PERIOD.timePeriod())
+      .plusSeconds(1);
+
+    scheduledNoticeProcessingClient.runLoanNoticesProcessing(processingTime);
+
+    verifyNumberOfScheduledNotices(0);
+    verifyNumberOfSentNotices(0);
+    verifyNumberOfPublishedEvents(NOTICE, 0);
+  }
+
+  @Test
+  public void beforeNoticesAreDiscardedWhenDueDateHasAlreadyPassed() {
+    generateLoanAndScheduledNotices(
+      beforeNotice(false),
+      beforeNotice(true)
+    );
+
+    verifyNumberOfScheduledNotices(2);
+
+    scheduledNoticeProcessingClient.runLoanNoticesProcessing(dueDate.plusSeconds(1));
+
+    verifyNumberOfScheduledNotices(0);
+    verifyNumberOfSentNotices(0);
+    verifyNumberOfPublishedEvents(NOTICE, 0);
+  }
+
+  @Test
+  public void recurringAfterNoticeIsDiscardedWhenItemIsDeclaredLost() {
+    recurringAfterNoticeIsDiscardedWhenItemStatusIsWrong(
+      () -> declareLostFixtures.declareItemLost(loanId));
+  }
+
+  @Test
+  public void recurringAfterNoticeIsDiscardedWhenItemIsClaimedReturned() {
+    recurringAfterNoticeIsDiscardedWhenItemStatusIsWrong(
+      () -> claimItemReturnedFixture.claimItemReturned(loanId));
+  }
+
+  @Test
+  public void recurringAfterNoticeIsDiscardedWhenLoanIsAgedToLost() {
+    recurringAfterNoticeIsDiscardedWhenItemStatusIsWrong(ageToLostFixture::ageToLost);
+  }
+
+  private void recurringAfterNoticeIsDiscardedWhenItemStatusIsWrong(
+    Runnable itemStatusChangingAction) {
+
+    generateLoanAndScheduledNotices(
+      afterNotice(true),
+      afterNotice(false)
+    );
+
+    verifyNumberOfScheduledNotices(2);
+
+    itemStatusChangingAction.run();
+
+    verifyNumberOfScheduledNotices(2);
+
+    var processingTime = dueDate
+      .plus(AFTER_PERIOD.timePeriod())
+      .plus(AFTER_RECURRING_PERIOD.timePeriod())
+      .plusSeconds(1);
+
+    scheduledNoticeProcessingClient.runLoanNoticesProcessing(processingTime);
+
+    verifyNumberOfScheduledNotices(0);
+    verifyNumberOfSentNotices(1);
+    verifyNumberOfPublishedEvents(NOTICE, 1);
+
+    checkSentNotices(AFTER_TEMPLATE_ID);
   }
 
   private void createNotices(int numberOfNotices) {
-
-    DateTime systemTime = DateTime.now(DateTimeZone.UTC);
+    DateTime systemTime = DateTime.now(UTC);
     List<JsonObject> notices = createNoticesOverTime(systemTime::minusHours, numberOfNotices);
     for (JsonObject notice : notices) {
       scheduledNoticesClient.create(notice);
     }
   }
 
-  private void setUpNoticePolicy() {
-    JsonObject beforeDueDateNoticeConfiguration = new NoticeConfigurationBuilder()
-      .withTemplateId(beforeTemplateId)
-      .withDueDateEvent()
-      .withBeforeTiming(beforePeriod)
-      .recurring(beforeRecurringPeriod)
-      .sendInRealTime(true)
-      .create();
-
-    JsonObject uponAtDueDateNoticeConfiguration = new NoticeConfigurationBuilder()
-      .withTemplateId(uponAtTemplateId)
-      .withDueDateEvent()
-      .withUponAtTiming()
-      .sendInRealTime(true)
-      .create();
-
-    JsonObject afterDueDateNoticeConfiguration = new NoticeConfigurationBuilder()
-      .withTemplateId(afterTemplateId)
-      .withDueDateEvent()
-      .withAfterTiming(afterPeriod)
-      .recurring(afterRecurringPeriod)
-      .sendInRealTime(true)
-      .create();
-
+  private void generateLoanAndScheduledNotices(JsonObject... patronNoticeConfigurations) {
     NoticePolicyBuilder noticePolicy = new NoticePolicyBuilder()
       .withName("Policy with due date notices")
-      .withLoanNotices(Arrays.asList(
-        beforeDueDateNoticeConfiguration,
-        uponAtDueDateNoticeConfiguration,
-        afterDueDateNoticeConfiguration));
+      .withLoanNotices(List.of(patronNoticeConfigurations));
 
     useFallbackPolicies(
       loanPoliciesFixture.canCirculateRolling().getId(),
       requestPoliciesFixture.allowAllRequestPolicy().getId(),
       noticePoliciesFixture.create(noticePolicy).getId(),
-      overdueFinePoliciesFixture.facultyStandard().getId(),
-      lostItemFeePoliciesFixture.facultyStandard().getId());
+      overdueFinePoliciesFixture.noOverdueFine().getId(),
+      lostItemFeePoliciesFixture.chargeFee().getId());
+
+    loan = checkOutFixture.checkOutByBarcode(
+      new CheckOutByBarcodeRequestBuilder()
+        .forItem(item)
+        .to(borrower)
+        .on(LOAN_DATE)
+        .at(UUID.randomUUID()));
+
+    loanId = loan.getId();
+
+    dueDate = new DateTime(loan.getJson().getString("dueDate"));
+
+    verifyNumberOfScheduledNotices(patronNoticeConfigurations.length);
   }
 
-  private void assertSetUpIsCorrect() {
-    Awaitility.await()
-      .atMost(1, TimeUnit.SECONDS)
-      .until(scheduledNoticesClient::getAll, hasSize(3));
-
-    checkScheduledNotices(
-      dueDate.minus(beforePeriod.timePeriod()),
-      dueDate,
-      dueDate.plus(afterPeriod.timePeriod()));
+  private static JsonObject beforeNotice(boolean recurring) {
+    return new NoticeConfigurationBuilder()
+      .withTemplateId(recurring ? BEFORE_RECURRING_TEMPLATE_ID : BEFORE_TEMPLATE_ID)
+      .withDueDateEvent()
+      .withBeforeTiming(BEFORE_PERIOD)
+      .recurring(recurring ? BEFORE_RECURRING_PERIOD : null)
+      .sendInRealTime(true)
+      .create();
   }
 
-  private void checkScheduledNotices(
-    DateTime beforeNoticeNextRunTime,
-    DateTime uponAtNoticeNextRunTime,
-    DateTime afterNoticeNextRunTime) {
+  private static JsonObject uponAtNotice() {
+    return new NoticeConfigurationBuilder()
+      .withTemplateId(UPON_AT_TEMPLATE_ID)
+      .withDueDateEvent()
+      .withUponAtTiming()
+      .sendInRealTime(true)
+      .create();
+  }
 
-    int numberOfExpectedScheduledNotices = 0;
-    numberOfExpectedScheduledNotices += beforeNoticeNextRunTime != null ? 1 : 0;
-    numberOfExpectedScheduledNotices += uponAtNoticeNextRunTime != null ? 1 : 0;
-    numberOfExpectedScheduledNotices += afterNoticeNextRunTime != null ? 1 : 0;
-
-    List<JsonObject> scheduledNotices = scheduledNoticesClient.getAll();
-
-    assertThat(scheduledNotices, hasSize(numberOfExpectedScheduledNotices));
-    if (beforeNoticeNextRunTime != null) {
-      assertThat(scheduledNotices, hasItems(
-        hasScheduledLoanNotice(
-          loan.getId(), beforeNoticeNextRunTime,
-          BEFORE_TIMING, beforeTemplateId,
-          beforeRecurringPeriod, true)));
-    }
-    if (uponAtNoticeNextRunTime != null) {
-      assertThat(scheduledNotices, hasItems(
-        hasScheduledLoanNotice(
-          loan.getId(), uponAtNoticeNextRunTime,
-          UPON_AT_TIMING, uponAtTemplateId,
-          null, true)));
-    }
-    if (afterNoticeNextRunTime != null) {
-      assertThat(scheduledNotices, hasItems(
-        hasScheduledLoanNotice(
-          loan.getId(), afterNoticeNextRunTime,
-          AFTER_TIMING, afterTemplateId,
-          afterRecurringPeriod, true)));
-    }
+  private static JsonObject afterNotice(boolean recurring) {
+    return new NoticeConfigurationBuilder()
+      .withTemplateId(recurring ? AFTER_RECURRING_TEMPLATE_ID : AFTER_TEMPLATE_ID)
+      .withDueDateEvent()
+      .withAfterTiming(AFTER_PERIOD)
+      .recurring(recurring ? AFTER_RECURRING_PERIOD : null)
+      .sendInRealTime(true)
+      .create();
   }
 
   @SuppressWarnings("unchecked")
@@ -512,7 +557,7 @@ public class DueDateScheduledNoticesProcessingTests extends APITests {
     assertThat(sentNotices, hasSize(expectedTemplateIds.length));
     assertThat(sentNotices, hasItems(matchers));
 
-    assertThat(FakePubSub.getPublishedEventsAsList(byLogEventType(NOTICE.value())), hasSize(expectedTemplateIds.length));
+    verifyNumberOfPublishedEvents(NOTICE, expectedTemplateIds.length);
   }
 
   private List<JsonObject> createNoticesOverTime(
@@ -533,7 +578,8 @@ public class DueDateScheduledNoticesProcessingTests extends APITests {
     return new JsonObject()
       .put("id", UUID.randomUUID().toString())
       .put("loanId", loan.getId().toString())
-      .put(NEXT_RUN_TIME, nextRunTime.withZone(DateTimeZone.UTC).toString())
+      .put("recipientUserId", borrower.getId().toString())
+      .put(NEXT_RUN_TIME, nextRunTime.withZone(UTC).toString())
       .put("triggeringEvent", "Due date")
       .put("noticeConfig",
         new JsonObject()
@@ -542,5 +588,19 @@ public class DueDateScheduledNoticesProcessingTests extends APITests {
           .put("format", "Email")
           .put("sendInRealTime", true)
       );
+  }
+
+  private static Matcher<JsonObject> scheduledNoticeMatcher(UUID loanId, UUID templateId,
+    String timing, Period recurringPeriod, DateTime nextRunTime) {
+
+    return hasScheduledLoanNotice(loanId, nextRunTime, timing, templateId, recurringPeriod, true);
+  }
+
+  @SafeVarargs
+  private void verifyScheduledNotices(Matcher<JsonObject>... noticeMatchers) {
+    List<JsonObject> scheduledNotices = scheduledNoticesClient.getAll();
+
+    assertThat(scheduledNotices, hasSize(noticeMatchers.length));
+    assertThat(scheduledNotices, hasItems(noticeMatchers));
   }
 }
